...
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_l"
                    android:hint="@string/operator_manual_code"
                    app:startIconDrawable="@drawable/ic_keyboard">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/scan_code"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionDone"
                        android:inputType="textNoSuggestions"
                        android:maxLines="2" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/scan_check_code"
                    style="@style/Widget.SolarGrid.Button.Secondary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_m"
                    android:text="@string/operator_check_action"
                    app:icon="@drawable/ic_shield_check" />
...
